<resources>
    <string name="app_name">NeWork</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="job_now">now</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="google_play_unavailable">Google API Unavailable</string>
    <string name="name">Стерехов Е.П.</string>
    <string name="welcome_back">С возвращением</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="enter">Войти</string>
    <string name="event_content">Описание события</string>
    <string name="link">Сайт</string>
    <string name="time">Дата проведения</string>
    <string name="speakers">Добавить участников</string>
    <string name="news">Что нового?</string>
    <string name="job">Добавить место работы</string>
    <string name="place">Место работы</string>
    <string name="post_job">Должнсть</string>
    <string name="start_job">Начало работы</string>
    <string name="end_job">Конец работы</string>
    <string name="add">Добавить</string>
    <string name="regist">Регистрация</string>
    <string name="your_name">Имя</string>
    <string name="you_have_account">Уже есть аккаунт?</string>
    <string name="go">Вход</string>
    <string name="list_users">Список пользователей</string>
    <string name="profile_users">Профиль юзеров</string>
    <string name="time_date">2023-03-23 17-37</string>
    <string name="test_link">https://yandex.ru/</string>
    <string name="start_event">Время проведения</string>
    <string name="test_time_2">23 апреля 2024 год</string>
    <string name="go_to_event">Кто идет</string>
    <string name="speakers_event">Спикеры</string>
    <string name="_0">0</string>
    <string name="company">Компания:</string>
    <string name="test_comp">Нетология</string>
    <string name="post_jobs">Должность:</string>
    <string name="test_post">Стажер</string>
    <string name="start_jobs">Начало:</string>
    <string name="end_jobs">Конец:</string>
</resources>