<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:padding="4dp"
        android:src="@drawable/ic_menu_vert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar" />

    <TextView
        android:id="@+id/tv_author"
        style="@style/TextStyleMonserrat"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="@+id/iv_avatar"
        app:layout_constraintStart_toStartOf="@+id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

    <TextView
        android:id="@+id/tv_time"
        style="@style/TextStylePoppins"
        android:layout_marginTop="8dp"
        android:text="@string/time_date"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_author"
        app:layout_constraintStart_toStartOf="@+id/tv_author"
        app:layout_constraintTop_toBottomOf="@+id/tv_job" />

    <TextView
        android:id="@+id/tv_job"
        style="@style/TextStylePoppins"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_author"
        app:layout_constraintStart_toStartOf="@+id/tv_author"
        app:layout_constraintTop_toBottomOf="@+id/tv_author" />

    <TextView
        android:id="@+id/tv_content"
        style="@style/TextStylePoppins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time"
        tools:text="@tools:sample/lorem[55]" />

    <TextView
        android:id="@+id/tv_link"
        style="@style/TextStyleMonserrat"
        android:layout_marginTop="8dp"
        android:text="@string/link"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_content" />

    <TextView
        android:id="@+id/tv_link_content"
        style="@style/TextStyleMonserrat"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/test_link"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tv_link"
        app:layout_constraintTop_toBottomOf="@+id/tv_content" />

    <TextView
        android:id="@+id/tv_datetime"
        style="@style/TextStyleMonserrat"
        android:layout_marginTop="8dp"
        android:text="@string/start_event"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_link"
        app:layout_constraintTop_toBottomOf="@+id/tv_link_content" />

    <TextView
        android:id="@+id/tv_datetime_content"
        style="@style/TextStyleMonserrat"
        android:layout_marginStart="24dp"
        android:text="@string/test_time_2"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_datetime"
        app:layout_constraintStart_toEndOf="@+id/tv_datetime" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/line"
        android:paddingBottom="6dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_datetime_content"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_go"
        style="@style/TextStyleMonserrat"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/go_to_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <TextView
        android:id="@+id/tv_speakers_content"
        style="@style/TextStyleMonserrat"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/speakers_event"
        app:layout_constraintEnd_toStartOf="@+id/ib_users"
        app:layout_constraintTop_toBottomOf="@+id/line" />


    <ImageButton
        android:id="@+id/ib_liked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="#00FFFFFF"
        android:src="@drawable/ic_liked"
        app:layout_constraintBottom_toBottomOf="@+id/tv_count_liked"
        app:layout_constraintStart_toEndOf="@+id/tv_count_liked"
        app:layout_constraintTop_toTopOf="@+id/tv_count_liked" />

    <TextView
        android:id="@+id/tv_count_liked"
        style="@style/TextStyleMonserrat"
        android:layout_marginStart="24dp"
        android:text="@string/_0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_go"
        app:layout_constraintStart_toEndOf="@+id/tv_go"
        app:layout_constraintTop_toTopOf="@+id/tv_go" />

    <ImageButton
        android:id="@+id/ib_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="#00FFFFFF"
        android:src="@drawable/ic_mic"
        app:layout_constraintBottom_toBottomOf="@+id/tv_speakers_content"
        app:layout_constraintEnd_toStartOf="@+id/tv_count_users"
        app:layout_constraintTop_toTopOf="@+id/tv_speakers_content" />

    <TextView
        android:id="@+id/tv_count_users"
        style="@style/TextStyleMonserrat"
        android:layout_marginEnd="16dp"
        android:text="@string/_0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ib_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ib_users" />



</androidx.constraintlayout.widget.ConstraintLayout>